[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/reused_scenes/narrative_text.tscn" type="PackedScene" id=1]
[ext_resource path="res://logic/game_screen_logic/content_container.gd" type="Script" id=3]

[node name="ContentContainer" type="VBoxContainer"]
margin_top = 65.0
margin_right = 346.0
margin_bottom = 561.0
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="NarrativeText" parent="." instance=ExtResource( 1 )]
margin_top = 0.0
margin_bottom = 342.0

[node name="ChoicesMargin" type="MarginContainer" parent="."]
margin_top = 346.0
margin_right = 346.0
margin_bottom = 496.0
rect_min_size = Vector2( 0, 150 )
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="ChoicesContainer" type="VBoxContainer" parent="ChoicesMargin"]
margin_left = 50.0
margin_right = 296.0
margin_bottom = 150.0
custom_constants/separation = 10
alignment = 1

[node name="Choice1" type="Button" parent="ChoicesMargin/ChoicesContainer"]
margin_right = 246.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "Choice1"

[node name="Choice2" type="Button" parent="ChoicesMargin/ChoicesContainer"]
margin_top = 40.0
margin_right = 246.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 30 )
text = "Choice2"

[node name="Choice3" type="Button" parent="ChoicesMargin/ChoicesContainer"]
margin_top = 80.0
margin_right = 246.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 30 )
text = "Choice3"

[node name="Choice4" type="Button" parent="ChoicesMargin/ChoicesContainer"]
margin_top = 120.0
margin_right = 246.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 30 )
text = "Choice4"
